--- a/README
+++ b/README
@@ -1,31 +1,9 @@
-#solutions usages redis and rebbitmq 
-$ wget http://download.redis.io/releases/redis-2.8.3.tar.gz
-$ tar xzvf redis-2.8.3.tar.gz
-$ cd redis-2.8.3
-$ make
-$ make install
+This is my second iterations for this project
+
+I tried to do the first one with a noSql database which stores message and sort them with timestamp
+
+The second solution is based on rabbiMq messaging server which I found quite a perfect suite for this
+
+The http server keeps track in memory for subscriptions and create a queue for each subscriptions
 
 
-
-pip install pika
-su -c 'rpm -Uvh http://download.fedoraproject.org/pub/epel/6/i386/epel-release-6-8.noarch.rpm'
-su -c ' yum install erlang'
-
-# Add and enable relevant application repositories:
-# Note: We are also enabling third party remi package repositories.
-wget http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
-wget http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
-sudo rpm -Uvh remi-release-6*.rpm epel-release-6*.rpm
-
-# Finally, download and install Erlang:
-yum install -y erlang
-Once we have Erlang, we can continue with installing RabbitMQ:
-
-# Download the latest RabbitMQ package using wget:
-wget http://www.rabbitmq.com/releases/rabbitmq-server/v3.2.2/rabbitmq-server-3.2.2-1.noarch.rpm
-
-# Add the necessary keys for verification:
-rpm --import http://www.rabbitmq.com/rabbitmq-signing-key-public.asc
-
-# Install the .RPM package using YUM:
-yum install rabbitmq-server-3.2.2-1.noarch.rpm
